--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-      "target": "es5",
+      "target": "ES2015",
       "useDefineForClassFields": true,
       "module": "esnext",
       "moduleResolution": "node",
